the awful. awful. header

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/index.css">
     </head>
-    <body>
+    <body class="flexbox">
         <header class="navigation">
             <a class="logo inline-block" href="index.html">
                 Madeleine Patton
             </a>
-            <nav class="inline-block">
+            <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
