--- a/index.html
+++ b/index.html
@@ -31,28 +31,43 @@
                 <h2>User Experience Researcher</h2>
             </section>
 
+<!-- PRACTICE GRID FOR HW 18 PURPOSES -->
+            <div class="grid-container">
+                <p class="grid-item">Skip to:</p>
+                <a class="grid-item1" href="#p1">
+                    <div>project1</div>
+                </a>   
+                <a class="grid-item2" href="#p2">
+                    <div>project2</div>
+                </a> 
+                <a class="grid-item3" href="#p3">
+                    <div>project3</div>
+                </a> 
+            </div>
+
 <!-- PROJECT 1 -->
 
+            <a id="p1"></a>
             <section class="rightlap flexbox">
-                <div class="flexbox"> <!-- container to prevent flex wrapping / allow clipping -->
+                <div class="flexbox" style="align-items: center"> <!-- container to prevent flex wrapping / allow clipping -->
                     <a class="rightlap project-info" href="#">
                         <h1>project1 title</h1>
                         <p>1-2 sentence description</p>
                     </a>
                     <div class="mock">
-                        <img src="https://via.placeholder.com/850x600/cccccc?text=mockup">
+                        <img src="images/fake_mock2.jpg">
                     </div>
                 </div>
             </section>
 
 
-
 <!-- PROJECT 2 -->
 
+            <a id="p2"></a>
             <section class="triple flexbox">
                 <div class="flexbox"> <!-- container to prevent flex wrapping / allow clipping -->
                     <div class="left-mock">
-                        <img src="https://via.placeholder.com/700x600/cccccc?text=mockup">
+                        <img src="images/patience.jpg">
                     </div>
                     <a class="project-info" href="#">
                         <div class="info-content"> 
@@ -61,12 +76,25 @@
                         </div>
                     </a>
                     <div class="right-mock">
-                        <img src="https://via.placeholder.com/600x600/cccccc?text=mockup">
+                        <img src="images/patience.jpg">
                     </div>
                 </div>
             </section>
 
 <!-- PROJECT 3 -->
+
+            <a id="p3"></a>
+            <section class="leftlap flexbox">
+                <div class="flexbox" style="align-items:center"> <!-- container to prevent flex wrapping / allow clipping -->
+                    <div class="mock">
+                        <img src="images/firstfakemock.jpg">
+                    </div>
+                    <a class="leftlap project-info" href="#">
+                        <h1>project1 title</h1>
+                        <p>1-2 sentence description</p>
+                    </a>
+                </div>
+            </section>
 
 <!-- FOOTER -->
 
